updated contact page

--- a/contact.html
+++ b/contact.html
@@ -15,3 +15,22 @@
             <a href ="portfolio.html"> Portfolio</a>
              <a href="contact.html"> Contact</a>
              </nav>
+             <div id="container">
+                <form id="contactform">
+                    <ul>
+                        <li>
+                            <label for="name">name</label>
+                            <input type="text" id="name" name="name" placeholder="Jane Doe" required="required">
+                        </li>
+                        <li>
+                            <label for="email">Email</label>
+                            <input type="text" id="email" name="email" placeholder="example@yahoo.com" required="required">
+                        </li>
+                        <li>
+                            <label for="message">Send A Message</label>
+                            <textarea id="message" name="message" placeholder="example@yahoo.com" required="required"></textarea>
+                        </li>
+                        </ul>
+                        <input type="submit">
+                </form>
+            </div>
