added form to contact page

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type ="text/css" href="assets/style.css">
     
-    <title> Tanisha's Portfolio</title> 
+    <title> Contact</title> 
 </head>
 <body>
     <div class="container-lg">
@@ -15,3 +15,5 @@
             <a href ="portfolio.html"> Portfolio</a>
              <a href="contact.html"> Contact</a>
              </nav>
+
+           
